Add shared bot accounts
